[package]
name = "create_contract_target_address"
version = "0.1.0"
edition = "2021"
default-run = "create_contract_target_address"

[[bin]]
name = "generate_calldata"
path = "src/utilities/generate_calldata.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ethers = { git = "https://github.com/gakonst/ethers-rs" }
rand = "0.8"
